Fix bug where expanded category created extra margins

--- a/static/style/index.css
+++ b/static/style/index.css
@@ -30,6 +30,10 @@ body {
     background: white;
 }
 
+#accordion {
+    margin-bottom: -10px;
+}
+
 .panel-heading {
     border-radius: 0px;
 }
@@ -135,7 +139,6 @@ small {
     font-size: 20px;
     border: none;
 }
-
 
 .ct-panel-toggle:hover {
     cursor: pointer;
